style: ajustes de formato + csv tarea 8

--- a/SebastianHernandez_AlexMondaca.ipynb
+++ b/SebastianHernandez_AlexMondaca.ipynb
@@ -391,7 +391,7 @@
    "id": "ca70d806",
    "metadata": {},
    "source": [
-    "# Clustering, sin reducción"
+    "# 1. Clustering sin reducción"
    ]
   },
   {
@@ -505,10 +505,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "401d1f85",
+   "metadata": {},
+   "source": [
+    "La técnica que genera agrupamientos más claros basándonos solamente en la visualización 2D es "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7a7d71cd",
    "metadata": {},
    "source": [
-    "#  Clustering, con reducción"
+    "#  2. Clustering, con reducción de dimensionalidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3be5265e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PCA"
    ]
   },
   {
@@ -556,8 +574,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0128f5a",
+   "metadata": {},
+   "source": [
+    "### Visualización: Clustering con reducción de dimensionalidad PCA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
+   "id": "b4351c66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c55d9264",
+   "metadata": {},
+   "source": [
+    "### Visualización: Clustering con reducción de dimensionalidad t-SNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "56b6cb4b",
    "metadata": {},
    "outputs": [
@@ -579,7 +621,6 @@
     "plt.xlabel('Componente 1')\n",
     "plt.ylabel('Componente 2')\n",
     "plt.grid()\n",
-    "#plt.title('K-means Clustering con reduccion de dimensionalidad t-SNE')\n",
     "plt.show()"
    ]
   },
@@ -696,6 +737,31 @@
    "source": [
     "hdbscan_clust_visible.condensed_tree_.plot(select_clusters=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9962d263",
+   "metadata": {},
+   "source": [
+    "# 3. Pseudo-labeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee19bcd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('customers_Tarea8.csv')\n",
+    "df\n",
+    "df[\"Dt_Customer\"] = pd.to_datetime(df[\"Dt_Customer\"], format=\"%d-%m-%Y\")\n",
+    "df[\"Year\"] = df[\"Dt_Customer\"].dt.year\n",
+    "df[\"Month\"] = df[\"Dt_Customer\"].dt.month\n",
+    "df[\"Day\"] = df[\"Dt_Customer\"].dt.day\n",
+    "df = df.drop(columns=[\"Dt_Customer\"])\n",
+    "X = df.drop(axis=1, columns=[\"Response\"])\n"
    ]
   }
  ],
